# ChangeLog for dev-ruby/nokogiri
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/nokogiri/ChangeLog,v 1.64 2011/11/06 11:39:51 graaff Exp $

*nokogiri-1.5.0-r1 (06 Nov 2011)

  06 Nov 2011; Hans de Graaff <graaff@gentoo.org> +nokogiri-1.5.0-r1.ebuild:
  Readd jruby support. Work around ruby19 test failures.

  02 Oct 2011; Raúl Porcel <armin76@gentoo.org> nokogiri-1.4.4-r1.ebuild:
  ia64/sparc stable wrt #369573

  14 Sep 2011; Jeroen Roovers <jer@gentoo.org> nokogiri-1.4.4-r1.ebuild:
  Stable for HPPA (bug #369573).

  27 Aug 2011; Fabian Groffen <grobian@gentoo.org> nokogiri-1.5.0.ebuild:
  Provide locations to libraries, and help extconf to guess the library name of
  libiconv for Prefix platforms. Marked ~x64-macos

  02 Aug 2011; Markos Chandras <hwoarang@gentoo.org> nokogiri-1.4.4-r1.ebuild:
  Stable on amd64 wrt bug #348510

  23 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> nokogiri-1.4.4-r1.ebuild:
  ppc stable wrt #348510

  20 Jul 2011; Thomas Kahle <tomka@gentoo.org> nokogiri-1.4.4-r1.ebuild:
  x86 stable per bug 348510

  09 Jul 2011; Hans de Graaff <graaff@gentoo.org> nokogiri-1.4.4-r1.ebuild:
  Drop ruby19 to create a stable candidate.

*nokogiri-1.5.0 (09 Jul 2011)

  09 Jul 2011; Hans de Graaff <graaff@gentoo.org> +nokogiri-1.5.0.ebuild:
  Version bump. The ffi interface is no longer supported, so jruby has been
  dropped. It should be possible to add that back later by building the native
  jruby support.

  09 Jul 2011; Hans de Graaff <graaff@gentoo.org> -nokogiri-1.4.4.ebuild:
  Remove old version.

  23 May 2011; Thomas Kahle <tomka@gentoo.org> nokogiri-1.4.4-r1.ebuild:
  ~x86 per bug 365417

*nokogiri-1.4.4-r1 (30 Apr 2011)

  30 Apr 2011; Hans de Graaff <graaff@gentoo.org> +nokogiri-1.4.4-r1.ebuild:
  dev-ruby/weakling is actually a runtime dependency when using jruby. Drop
  x86 keyword because of this, bug 365417.
