@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/nokogiri
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/nokogiri/ChangeLog,v 1.64 2011/11/06 11:39:51 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/nokogiri/ChangeLog,v 1.65 2011/11/19 12:56:29 graaff Exp $
+
+*nokogiri-1.5.0-r2 (19 Nov 2011)
+
+  19 Nov 2011; Hans de Graaff <graaff@gentoo.org> +nokogiri-1.5.0-r2.ebuild:
+  Build parser.rb now that we use the github tarball where this has not been
+  done yet. Fixes bug 390477.
 
 *nokogiri-1.5.0-r1 (06 Nov 2011)
 
